--- a/8.html
+++ b/8.html
@@ -48,7 +48,7 @@
  </li>   
 </ol>
 <center>
-    <a href="9.html"><h2><b>BACK</b>
+    <a href="index.html"><h2><b>BACK</b>
     </h2></a>
 </center>
 
